syntax = "proto3";

option go_package = "./;proto";
option java_package = "com.github.go2o.rpc";


// 广告位编号
message AdPositionId {
  int64 PositionId = 1;
}

message AdGroupResponse{
  repeated string Value = 1;
}

message SAdPosition{
  /** 编号 */
  int64 id = 1;
  /** 广告位编码 */
  string key = 2;
  /** 分组名称 */
  string groupName = 3;
  /** 广告位名称 */
  string name = 4;
  /** 投放的广告编号 */
  int64 putAid = 5;
  /** Opened */
  int32 opened = 6;
  /** Enabled */
  int32 enabled = 7;
  /** 标志 */
  int32 flag = 8;
}

// 查询广告请求
message QueryAdRequest{
  string keyword = 1;
  int32 size = 2;
}

// 查询广告响应
message QueryAdResponse{
  repeated SAdDto value = 1;
}

// 广告用户设置
message SAdUserSet {
  // 编号
  int64 id = 1;
  // 广告位编号
  int64 posId = 2;
  //广告用户编号
  int64 adUserId = 3;
  // 广告编号
  int64 adId = 4;
}

// 广告
message SAdDto {
  // 编号
  int64 id = 1;
  //广告用户编号
  int64 UserId = 2;
  // 名称
  string Name = 3;
  // 广告类型
  int32 AdType = 4;
  // 展现次数
  int32 ShowTimes = 5;
  // 点击次数
  int32 ClickTimes = 6;
  // 展现天数
  int32 ShowDays = 7;
  // 修改时间
  int64 UpdateTime = 8;
  // 广告数据
  SAdvertisementDto Data = 9;
}

// 广告数据传输对象
message SAdvertisementDto {
  // 广告编号
  int64 id = 1;
  // 广告类型
  int32 AdType = 2;
  // 文本广告数据
  STextAdData Text = 3;
  // 图片广告数据
  SImageAdData image = 4;
  // 轮播广告数据
  SSwiperAdData Swiper = 5;
}

// 文本广告数据
message STextAdData {
  int64 id = 1;
  string Title = 2;
  string LinkURL = 3;
}

// 图片广告数据
message SImageAdData {
  // 图片编号
  int64 id = 1;
  // 图片标题
  string Title = 2;
  // 链接
  string LinkURL = 3;
  // 图片地址
  string ImageURL = 4;
  // 是否启用
  int32 Enabled = 5;
  // 排列序号
  int32 SortNum = 6;
}

// 轮播广告数据
message SSwiperAdData{
  repeated SImageAdData Images = 1;
}

message SetDefaultAdRequest {
  int64 PositionId = 2;
  int64 AdId = 3;
}
message SetUserAdRequest {
  int64 AdUserId = 1;
  int64 PosId = 2;
  int64 AdId = 3;
}
message AdIdRequest {
  // 广告用户编号
  int64 AdUserId = 1;
  // 广告编号
  int64 AdId = 2;
  // 广告位KEY
  string AdKey = 3;
  // 是否返回数据
  bool ReturnData = 4;
}

message SaveAdRequest {
  int64 AdUserId = 1;
  SAdDto Value = 2;
  SAdvertisementDto Data = 3;
}

message SaveSwiperImageRequest {
  int64 AdUserId = 1;
  int64 AdId = 2;
  SImageAdData Value = 3;
}

message ImageIdRequest {
  int64 AdUserId = 1;
  int64 AdId = 2;
  int64 ImageId = 3;
}

// 查询广告数据
message QueryAdvertisementDataRequest{
  // 广告用户编号
  int64 AdUserId = 1;
  //　广告位键
  repeated string Keys = 2;
}

// 查询广告数据
message QueryAdvertisementDataResponse{
  // 广告用户编号
  int64 AdUserId = 1;
  //　广告位键
  map<string,SAdvertisementDto> Value = 2;
}

